<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/al_ttv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/al_title_main"
            android:textColor="@color/dark_red"
            android:textSize="64sp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/al_ttv">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/al_title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/al_title_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                android:layout_margin="16dp"/>

            <TextView
                android:id="@+id/al_desc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/al_desc_1"/>

            <TextView
                android:id="@+id/al_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/al_title_2"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                android:layout_margin="16dp"/>

            <TextView
                android:id="@+id/al_desc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/al_desc_2"/>

            <TextView
                android:id="@+id/al_title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/al_title_3"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                android:layout_margin="16dp"/>

            <TextView
                android:id="@+id/al_desc3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/al_desc_3"/>

            <TextView
                android:id="@+id/al_title4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/al_title_4"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                android:layout_margin="16dp"/>

            <TextView
                android:id="@+id/al_desc4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/al_desc_4"/>

            <TextView
                android:id="@+id/al_title5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/al_title_5"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                android:layout_margin="16dp"/>

            <TextView
                android:id="@+id/al_desc5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/al_desc_5"/>
        </LinearLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
